WIP
Refactor `Order` and `OrderItem` modules: migrate DTOs, add mappers, update entities for `OrderStatus` and enhanced `quantity` typing, streamline `OrderService` logic, and improve controller response handling.