@@ -1,8 +1,10 @@
 package com.firstcatchcrew.restapi.order;
 
 import com.firstcatchcrew.restapi.fishCatch.CatchRepository;
+import com.firstcatchcrew.restapi.order.dto.OrderCreateDTO;
+import com.firstcatchcrew.restapi.order.dto.OrderViewDTO;
 import com.firstcatchcrew.restapi.orderItem.OrderItem;
-import com.firstcatchcrew.restapi.orderItem.OrderItemCreateDTO;
+import com.firstcatchcrew.restapi.orderItem.OrderItemMapper;
 import com.firstcatchcrew.restapi.orderItem.OrderItemRepository;
 import com.firstcatchcrew.restapi.person.Person;
 import com.firstcatchcrew.restapi.person.PersonRepository;
@@ -10,8 +12,6 @@ import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class OrderService {
@@ -31,55 +31,66 @@ public class OrderService {
         this.orderItemRepository = orderItemRepository;
     }
 
-    public List<Order> getAllOrders() {
-        return orderRepository.findAll();
+    public List<OrderViewDTO> getAllOrders() {
+        return orderRepository.findAll()
+                .stream()
+                .map(OrderMapper::from)
+                .toList();
     }
 
-    public List<Order> getOrdersByCustomerId(long customerId) {
-        Person customer = personRepository.findById(customerId).orElse(null);
-        return (customer == null)
-                ? List.of()
-                : orderRepository.findAllByCustomer(customer);
+    public OrderViewDTO getOrderById(long id) {
+        return orderRepository.findById(id)
+                .map(OrderMapper::from)
+                .orElse(null);
+    }
+
+    public List<OrderViewDTO> getOrdersByCustomerUsername(String username) {
+        return orderRepository.findByCustomerUsername(username)
+                .stream()
+                .map(OrderMapper::from)
+                .toList();
     }
 
     @Transactional
-    public Order create(OrderCreateDTO dto) {
+    public OrderViewDTO createOrder(OrderCreateDTO dto) {
         Person customer = personRepository.findById(dto.getCustomerId())
                 .orElseThrow(() -> new IllegalArgumentException("Customer not found"));
-        // map items
+
         List<OrderItem> items = dto.getOrderItems().stream()
-                .map(iDto -> {
-                    var fishCatch = catchRepository.findById(iDto.getCatchId())
+                .map(itemDto -> {
+                    var fishCatch = catchRepository.findById(itemDto.getCatchId())
                             .orElseThrow(() -> new IllegalArgumentException("Catch not found"));
-                    return OrderMapper.fromCreateDTO(iDto, fishCatch);
+                    return OrderItemMapper.toEntity(itemDto, fishCatch);
                 })
-                .collect(Collectors.toList());
-        var order = OrderMapper.fromCreateDTO(dto, customer, items);
-        return orderRepository.save(order);
+                .toList();
+
+        Order order = OrderMapper.toEntity(dto, customer, items);
+        return OrderMapper.from(orderRepository.save(order));
     }
 
-    @Transactional
-    public Optional<Order> update(Long id, OrderCreateDTO dto) {
-        return orderRepository.findById(id).map(existing -> {
-            // update status
-            existing.setOrderStatus(dto.getOrderStatus());
-            // update items: delete old, add new
-            existing.getOrderItems().clear();
-            orderItemRepository.deleteAllInBatch(existing.getOrderItems());
-            List<OrderItem> items = dto.getOrderItems().stream()
-                    .map(iDto -> {
-                        var fishCatch = catchRepository.findById(iDto.getCatchId())
-                                .orElseThrow(() -> new IllegalArgumentException("Catch not found"));
-                        return OrderMapper.fromCreateDTO(iDto, fishCatch);
-                    })
-                    .collect(Collectors.toList());
-            existing.setOrderItems(items);
-            items.forEach(i -> i.setOrder(existing));
-            return orderRepository.save(existing);
-        });
-    }
 
-    public boolean delete(Long id) {
+//    @Transactional
+//    public OrderViewDTO updateOrder(Long id, OrderCreateDTO dto) {
+//        return orderRepository.findById(id).map(existing -> {
+//            // update status
+//            existing.setOrderStatus(dto.getOrderStatus());
+//            // update items: delete old, add new
+//            existing.getOrderItems().clear();
+//            orderItemRepository.deleteAllInBatch(existing.getOrderItems());
+//            List<OrderItem> items = dto.getOrderItems().stream()
+//                    .map(item -> {
+//                        var fishCatch = catchRepository.findById(item.getCatchId())
+//                                .orElseThrow(() -> new IllegalArgumentException("Catch not found"));
+//                        return OrderMapper.from(item, fishCatch);
+//                    })
+//                    .collect(Collectors.toList());
+//            existing.setOrderItems(items);
+//            items.forEach(item -> item.setOrder(existing));
+//            return orderRepository.save(existing);
+//        });
+//    }
+
+    public boolean deleteByOrderId(Long id) {
         if (!orderRepository.existsById(id)) return false;
         orderRepository.deleteById(id);
         return true;
